SERVER-48504 Combination of StaleShardVersion and ShardNotFound exception make the ChunkManagerTargeter crash